--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1140,9 +1140,12 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto, 256px 256px;
-			background-position: center, center;
-			background-repeat: no-repeat, repeat;
+			background-size: auto,
+ 256px 256px;
+			background-position: center,
+ center;
+			background-repeat: no-repeat,
+ repeat;
 			z-index: 2;
 		}
 
@@ -1656,3 +1659,54 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+
+		.resume .resume-title {
+			font-size: 26px;
+			font-weight: 700;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			color: #45505b;
+		  }
+		  .resume .resume-item {
+			padding: 0 0 20px 20px;
+			margin-top: -2px;
+			border-left: 2px solid #0563bb;
+			position: relative;
+		  }
+		  .resume .resume-item h4 {
+			line-height: 18px;
+			font-size: 18px;
+			font-weight: 600;
+			text-transform: uppercase;
+			font-family: "Poppins", sans-serif;
+			color: #0563bb;
+			margin-bottom: 10px;
+		  }
+		  .resume .resume-item h5 {
+			font-size: 16px;
+			background: #f7f8f9;
+			padding: 5px 15px;
+			display: inline-block;
+			font-weight: 600;
+			margin-bottom: 10px;
+		  }
+		  .resume .resume-item ul {
+			padding-left: 20px;
+		  }
+		  .resume .resume-item ul li {
+			padding-bottom: 10px;
+		  }
+		  .resume .resume-item:last-child {
+			padding-bottom: 0;
+		  }
+		  .resume .resume-item::before {
+			content: "";
+			position: absolute;
+			width: 16px;
+			height: 16px;
+			border-radius: 50px;
+			left: -9px;
+			top: 0;
+			background: #fff;
+			border: 2px solid #0563bb;
+		  }
